# WebsiteAuditAgent

./: .env.example  .gitignore  Dockerfile  README.md  RUNNING.md  agent_input.csv  analyzer.py  analyzer_v2.py  audit_agent.py  config.py  conversion_audit.py  output.py  owner_finder.py  personalization.py  preview_report.py  prompts.py  prompts_v2.py  prospector.py  pyproject.toml  replies_monitor.py  requirements.txt  scraper.py  screenshot.py  sender.py  usage.txt
.github/workflows/: daily_campaign.yml  replies_monitor.yml  send_followups.yml
data/: agent_input.csv  sample_contacts.csv  sample_input.csv
docs/: RUNNING.md
marketing/: _render_pipeline.py  linkedin_post.md  pipeline_philosophy.md  reddit_post.md  thumbnail.html  twitter_thread.md
tests/: RELIABILITY.md  run_all.sh  smoke_test.py  test_business_case.py  test_cost.py  test_critic.py  test_design_critic.py  test_design_smells.py  test_email_validator.py  test_feedback.py  test_gating.py  test_lead_scoring.py  test_llm.py  test_preview_report.py  test_prospector_overpass.py  test_quality_gate.py  test_reliability.py  test_replies_monitor.py  test_screenshot.py  test_serper_keys.py  test_sk_text.py  test_storage.py  test_v2.py
waa/: __init__.py  __main__.py  cli.py  config.py
waa/analysis/: analyzer.py  analyzer_v2.py  business_case.py  conversion_audit.py  critic.py  design_critic.py  design_smells.py  feedback.py  gating.py  lead_scoring.py  owner_finder.py  personalization.py  prompts.py  prompts_v2.py  quality_gate.py  sk_text.py
waa/core/: cost.py  llm.py  output.py  storage.py
(+8 files in other folders)
